--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -389,9 +389,9 @@
 <!ENTITY Ctr_menu_restart.label			"Neustarten">
 <!ENTITY Ctr_restartapp					"'Neustarten'-Eintrag im '&brandShortName;'- und 'Datei-Menü'">
 
-<!ENTITY Ctr_openInCurrentTab			"Eingabe im aktuellen Tab öffen">
-<!ENTITY Ctr_openInNewTab				"Eingabe im neuen Tab öffen">
-<!ENTITY Ctr_openInNewWindow			"Eingabe im neuen Fenster öffen">
+<!ENTITY Ctr_openInCurrentTab			"Eingabe im aktuellen Tab öffnen">
+<!ENTITY Ctr_openInNewTab				"Eingabe im neuen Tab öffnen">
+<!ENTITY Ctr_openInNewWindow			"Eingabe im neuen Fenster öffnen">
 
 <!-- Seitenkontextmenüschlüssel: individuell für jede Lokalisierung -->
 <!ENTITY backCmd.accesskey				"Z">
