--- a/xpi/locale/da/options.dtd
+++ b/xpi/locale/da/options.dtd
@@ -30,7 +30,7 @@
 <!ENTITY Ctr_tabcolors_t	"Faneblade farver &amp; tekst">
 
 <!ENTITY Ctr_tabs			"Faneblade">
-<!ENTITY Ctr_tabs0			"&brandShortName; standard (Afrundede faneblade)">
+<!ENTITY Ctr_tabs0			"&brandShortName; standard (afrundede faneblade)">
 <!ENTITY Ctr_tabs1			"Firkantede faneblade (klassisk)">
 <!ENTITY Ctr_tabs1m			"Firkantede faneblade (australisifiseret)">
 <!ENTITY Ctr_tabs2			"Afrundede faneblade (alternativ)">
@@ -56,9 +56,9 @@
 <!ENTITY Ctr_square_edges	"Firkantede øverste hjørner">
 <!ENTITY Ctr_tttitlebar		"Fanebladstitel i &brandShortName;-titellinje">
 <!ENTITY Ctr_tabinsertion	"Indsæt relaterede faneblad efter aktive faneblad">
-<!ENTITY Ctr_emptytfavico	"Show favicon (if a site does not offer one)">
-<!ENTITY Ctr_emptytfavico_n	"None">
-<!ENTITY Ctr_emptytfavico_g	"Generic">
+<!ENTITY Ctr_emptytfavico	"Vis favicon (hvis stedet ikke tilbyder et)">
+<!ENTITY Ctr_emptytfavico_n	"Intet">
+<!ENTITY Ctr_emptytfavico_g	"Generisk">
 <!ENTITY Ctr_noemptypticon	"Fjern tomme favicon fra fastgjorte faneblade">
 <!ENTITY Ctr_closetab_0		"Lukning af faneblad">
 <!ENTITY Ctr_closetab_1		"Kun på aktive faneblade">
@@ -69,12 +69,12 @@
 <!ENTITY Ctr_closetab_hfot	"Skjul hvis der kun er ét synligt faneblad">
 <!ENTITY Ctr_closei_def		"Standard ikoner">
 <!ENTITY Ctr_closeonleft	"Alternativ placering på faneblad">
-<!ENTITY Ctr_closetabbig	"Bigger icon (20x20px)">
+<!ENTITY Ctr_closetabbig	"Større ikon (20x20px)">
 <!ENTITY Ctr_close_wwltab	"Luk vindue med det sidste synlige faneblad">
 
 <!ENTITY Ctr_hctpinfotab	"Nogle varianter af faneblade er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Knapper på titellinje er ikke kompatible med tilføjelsen 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Tiløjelsen 'Tabs on Bottom' er ikke kompatibel med '&Ctr_title;' og bør deaktiveres. Brug i stedet tilgængelige '&Ctr_cuitabsnontop;'-indstillinger!">
 
 <!ENTITY Ctr_appbutton		"&brandShortName;-knap">
 <!ENTITY Ctr_appbutton0		"Deaktivér knap">
@@ -124,17 +124,17 @@
 <!ENTITY Ctr_altoptionsww	"Bredde">
 <!ENTITY Ctr_altoptionswh	"Højde">
 <!ENTITY Ctr_altoptionsi	"Det simulerede indstillinger-vindue er ikke længere en dialog men et 'browservindue' med alle værktøjslinjer skjult. Funktionen 'Anvend nuværende side' tilføjer kun url'er fra sider som er åbne i det nuværende vindue, hvilket i dette tilfælde kun er 'about:preferences'. Værktøjslinjeknappen 'indstillinger' erstattes af en ny en for at kunne åbne indstillinger i et vindue.">
-<!ENTITY Ctr_options_rem	"Husk seneste valgte kategori">
+<!ENTITY Ctr_options_rem	"Husk senest valgte kategori">
 <!ENTITY Ctr_svgfilters		"SVG-farver til standard værktøjslinje knap ikoner">
 <!ENTITY Ctr_wincontrols	"Flytbar fuldskærmsvindue kontrolelementer">
-<!ENTITY Ctr_puibuttonsep	"Menu button separator">
-<!ENTITY Ctr_puibut_no_sep	"Hidden">
-<!ENTITY Ctr_puibut_l_sep	"Left">
-<!ENTITY Ctr_puibut_r_sep	"Right">
-<!ENTITY Ctr_html5warning	"HTML5 full screen warning">
+<!ENTITY Ctr_puibuttonsep	"Menuknapseparator">
+<!ENTITY Ctr_puibut_no_sep	"Skjult">
+<!ENTITY Ctr_puibut_l_sep	"Venstre">
+<!ENTITY Ctr_puibut_r_sep	"Højre">
+<!ENTITY Ctr_html5warning	"HTML5 fuldskærm-advarsel">
 <!ENTITY Ctr_oldtoplevimg	"'Top level domæne'-billeder: klassisk udseende">
 <!ENTITY Ctr_altalertbox	"'Alert-boks': alternativt udseende">
-<!ENTITY Ctr_emptygfavico	"Replace generic favicon">
+<!ENTITY Ctr_emptygfavico	"Erstat generisk favicon">
 <!ENTITY Ctr_mstatusbar		"Flytbare statuspanel">
 <!ENTITY Ctr_mstatusbars4e	"Statuslinje-panel styres af 'Status-4-Evar'">
 <!ENTITY Ctr_mstatusbartpp	"Statuslinje-panel styres af 'ThePuzzlePiece'">
@@ -157,20 +157,20 @@
 <!ENTITY Ctr_nav_txt_ico1	"Vis store ikoner">
 <!ENTITY Ctr_nav_txt_ico2	"Vis ikoner og tekst">
 <!ENTITY Ctr_nav_txt_ico3	"Vis kun tekst">
-<!ENTITY Ctr_nav_txt_exp	"Classic attributes (experimental):">
+<!ENTITY Ctr_nav_txt_exp	"Klassik-attributter (eksperimentel):">
 <!ENTITY Ctr_iat_notf_vt	"Udeluk lodrette værktøjslinjer">
 <!ENTITY Ctr_cpanelmenus	"Panelmenu-popups: kompakt visning (bogmærker, historik, osv.): kompakt visning">
 <!ENTITY Ctr_hidezoomres	"Zoom-knapper på værktøjslinje: skjul zoom-nulstil-knapper">
 <!ENTITY Ctr_alt_newtabp	"Nyt faneblad-side (about:newtab): alternativt udseende">
-<!ENTITY Ctr_nosnippets		"Start page (about:home): hide snippets">
-<!ENTITY Ctr_search_ui		"Search">
+<!ENTITY Ctr_nosnippets		"Startside (about:home): skjul snippets">
+<!ENTITY Ctr_search_ui		"Søg">
 <!ENTITY Ctr_ctroldsearch	"Gamle søgning">
 <!ENTITY Ctr_ctroldsearchc	"Ryd søgeboks efter søgning">
-<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
+<!ENTITY Ctr_ctroldsearchr	"Fald tilbage til første søgemaskine i liste, efter søgning">
 <!ENTITY Ctr_search_oit		"Åbn søgning i nyt faneblad">
 <!ENTITY Ctr_osearch_meoit	"Mellemklik: søg i nyt 'forgrundsfaneblad'">
-<!ENTITY Ctr_osearch_iwidth	"Automatically adjust popup width">
-<!ENTITY Ctr_osearch_cwidth	"Custom width for search popups">
+<!ENTITY Ctr_osearch_iwidth	"Automatisk justering af popup-bredde">
+<!ENTITY Ctr_osearch_cwidth	"Brugerdefineret bredde for søgepopups">
 <!ENTITY Ctr_osearch_dm		"Lille rullepil">
 <!ENTITY Ctr_addonmanager	"Tilføjelseshåndtering">
 <!ENTITY Ctr_alt_addonsp	"'Mere info'-side: alternativ rækkefølge">
@@ -178,20 +178,20 @@
 <!ENTITY Ctr_am_nowarning	"Tilføjelseslister: skjul advarsler">
 <!ENTITY Ctr_am_compact		"Tilføjelseslister: kompakt visning">
 <!ENTITY Ctr_am_compact2	"Kompakt udseende +">
-<!ENTITY Ctr_am_highlight	"Add-on lists: highlight entry on hover">
-<!ENTITY Ctr_am_buticons	"Add-on lists: replace button labels with icons">
-<!ENTITY Ctr_am_hovshowb	"Add-on lists: only show buttons on 'hover'">
+<!ENTITY Ctr_am_highlight	"Tilføjelseslister: fremhæv element når der peges">
+<!ENTITY Ctr_am_buticons	"Tilføjelseslister: erstat knap-etiketter med ikoner">
+<!ENTITY Ctr_am_hovshowb	"Tilføjelseslister: vis kun knapper når der peges">
 <!ENTITY Ctr_addonversion	"Tilføjelseslister: vis tilføjelsesversion">
 <!ENTITY Ctr_xpinstallui	"Gamle tilføjelser-installationsvindue">
 <!ENTITY Ctr_bmbutton		"Bogmærker-menuknap">
-<!ENTITY Ctr_hiderecentbm	"Bookmarks popup: hide recently added bookmarks">
-<!ENTITY Ctr_hideeditbm		"Bookmarks star: hide popup (if page is not bookmarked)">
+<!ENTITY Ctr_hiderecentbm	"Bogmærkers popup: skjul senest tilførte bogmærker">
+<!ENTITY Ctr_hideeditbm		"Bogmærkers stjerne: skjul popup (hvis side ikke er bogmærket)">
 <!ENTITY Ctr_bmbutpanelm	"Popup: panelmenu udseende">
-<!ENTITY Ctr_bmbunsortbm	"Popup: 'usorterede bogmærker'-undermenu">
-<!ENTITY Ctr_bmbunsortbm2	"Menu above bookmarks">
-<!ENTITY Ctr_bmbviewbmsb	"Popup: show 'View Sidebar'">
-<!ENTITY Ctr_bmbviewbmtb	"Popup: vis 'Vis værktøjslinje'">
-<!ENTITY Ctr_bmbnounsort	"Popup: skjul 'usorterede bogmærker'">
+<!ENTITY Ctr_bmbunsortbm	"Popup: 'Usorterede bogmærker'-undermenu">
+<!ENTITY Ctr_bmbunsortbm2	"Menu over bogmærker">
+<!ENTITY Ctr_bmbviewbmsb	"Popup: vis 'Vis bogmærker i sidepanel'">
+<!ENTITY Ctr_bmbviewbmtb	"Popup: vis 'Vis bogmærkelinjen'">
+<!ENTITY Ctr_bmbnounsort	"Popup: skjul 'Usorterede bogmærker'">
 <!ENTITY Ctr_bmbutnotext	"Skjul etiket på bogmærkelinje">
 <!ENTITY Ctr_skipprintpr	"Udskriv-knap: Spring vis udskrift over">
 <!ENTITY Ctr_tbconmenu		"Værktøjslinjens genvejsmenu: skjul 'flyt til menu', 'fjern fra værktøjslinje', 'genindlæs/bogmærk alle faneblade' og 'fortryd lukning af faneblade">
@@ -240,11 +240,11 @@
 <!ENTITY Ctr_starinurlinfo	"Standard bogmærker-menuknap skjules">
 <!ENTITY Ctr_feedinurl		"RSS feed-knap">
 <!ENTITY Ctr_hideurelstop	"Skjul knapperne 'Stop &amp; genindlæs'">
-<!ENTITY Ctr_hideurelstop2	"Always show 'go' button">
+<!ENTITY Ctr_hideurelstop2	"Vis altid 'gå'-knap">
 <!ENTITY Ctr_hideurlgo		"Skjul 'gå'-knap">
 <!ENTITY Ctr_hideurlsrg		"Skjul 'genindlæs, stop &amp; gå'-knapseparatore &amp; mellemrum">
 <!ENTITY Ctr_urlbardropm	"Flyt rullemenu-pilen til den sidst mulige position">
-<!ENTITY Ctr_urlbardropm2	"Make dropmarker always visible">
+<!ENTITY Ctr_urlbardropm2	"Rullemenu-pil altid synlig">
 <!ENTITY Ctr_altreaderico	"Alternative 'Læser'-ikoner">
 <!ENTITY Ctr_hideprbutton	"Skjul notifikationsikonet når en popup blokeres">
 <!ENTITY Ctr_locsearchbw10	"Reducér adresselinjers og søgelinjers højde (eksperimentel)">
@@ -252,9 +252,9 @@
 <!ENTITY Ctr_ib_nohovcolor	"Vis ikke grå farve når der peges på">
 <!ENTITY Ctr_ib_graycolor	"Grå farve for ukendt identitet og chrome-sider">
 <!ENTITY Ctr_verifiedcolors	"Knapfarver for bekræftede websteder, sikre og ikke-sikre forbindelser">
-<!ENTITY Ctr_ibinfoico		"Replace 'i'-icon with globe icon">
-<!ENTITY Ctr_ibinfoico2		"Hide 'i'-icon (if possible)">
-<!ENTITY Ctr_iblabels		"Hide labels">
+<!ENTITY Ctr_ibinfoico		"Erstat 'i'-ikon med globe-ikon">
+<!ENTITY Ctr_ibinfoico2		"Skjul 'i'-ikon (hvis det er muligt)">
+<!ENTITY Ctr_iblabels		"Skjul etiketter">
 <!ENTITY Ctr_faviconurl		"Favicon: nuværende webstedsikon">
 <!ENTITY Ctr_padlock		"Hængelås ikon for sikre forbindelser">
 <!ENTITY Ctr_padlock_hid	"skjul">
@@ -262,15 +262,15 @@
 <!ENTITY Ctr_padlock_cla	"klassik">
 <!ENTITY Ctr_padlock_mod	"moderne">
 <!ENTITY Ctr_padlock_ext	"'&brandShortName;'-ikon for gyldige 'om'-sider">
-<!ENTITY Ctr_icopageinfo	"Favicon/globe-/'i'-icon: 'click' opens 'page info window'">
+<!ENTITY Ctr_icopageinfo	"Favicon/globe/'i'-ikon: 'klik' åbner 'sideoplysninger-vindue'">
 <!ENTITY Ctr_lbsbsize		"Brugerdefineret brede for adresselinje og søgelinje">
 <!ENTITY Ctr_searchbar		"Søgelinje">
-<!ENTITY Ctr_autocomplete	"Autocomplete popup">
-<!ENTITY Ctr_altautocompl	"Alternative appearance">
-<!ENTITY Ctr_urlbar_uc		"Disable 'unified autocomplete' feature">
-<!ENTITY Ctr_lbsugresi		"Disable height limit">
-<!ENTITY Ctr_lbsugres		"Number of results">
-<!ENTITY Ctr_lbsbradius		"Custom border radius for location bar and search bar">
+<!ENTITY Ctr_autocomplete	"Autofuldfør-popup">
+<!ENTITY Ctr_altautocompl	"Alternativt udseende (eksperimentel)">
+<!ENTITY Ctr_urlbar_uc		"Deaktivér 'samlede autofuldfør'-funktion">
+<!ENTITY Ctr_lbsugresi		"Deaktivér højdegrænse">
+<!ENTITY Ctr_lbsugres		"Antal resultater">
+<!ENTITY Ctr_lbsbradius		"Brugerdefineret kantradius for adresselinje og søgelinje">
 
 <!ENTITY Ctr_menubar_items	"Placering af menupunkter">
 <!ENTITY Ctr_extrabar		"Yderligere værktøjslinjer">
@@ -306,7 +306,7 @@
 <!ENTITY Ctr_menubarnofog	"Fjern baggrundsfarve/tåge (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Blå Aero-farver til værktøjslinjer (og faneblade)">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Grå-blå Aero-farver">
 <!ENTITY Ctr_transpttbw10	"Titel-/menu-/fanebladsværktøjslinje: fjern baggrundsfarve">
 <!ENTITY Ctr_transpttbew10	"Yderligere tweaks til nogle OS-temaer">
 <!ENTITY Ctr_transptcw10	"Skjul standard OS min/maks/luk-knapper">
@@ -327,8 +327,8 @@
 <!ENTITY Ctr_tbsep_winc		"Øverste værktøjslinjer: yderligere separatorer for værktøjslinje">
 
 <!ENTITY Ctr_closeabarbut	"Tilføjelseslinje: skjul luk-knap">
-<!ENTITY Ctr_highaddonsbar	"Gør højere">
-<!ENTITY Ctr_lessaddonsbar	"Decrease height">
+<!ENTITY Ctr_highaddonsbar	"Større">
+<!ENTITY Ctr_lessaddonsbar	"Mindre">
 <!ENTITY Ctr_addonbarfs		"I fuldskærmstilstand">
 
 <!ENTITY Ctr_animation		"Animation">
@@ -360,7 +360,7 @@
 <!ENTITY Ctr_fx38pocket2	"Bemærk: flyttes 'Pocket'-knappen til 'tilpasningspalet' før denne indstilling deaktiveres, vil det også fjerne 'Pocket'-poster fra bogmærker- og læser-menuer.">
 <!ENTITY Ctr_e_searchui		"Søge udseende">
 <!ENTITY Ctr_e_loop			"Opkald og samtale / Loop">
-<!ENTITY Ctr_e_deved		"Developer Edition tema">
+<!ENTITY Ctr_e_deved		"Developer Edition-tema">
 <!ENTITY Ctr_e_prefsui		"Indstillinger i faneblade">
 <!ENTITY Ctr_e_readermode	"Læsertilstand">
 <!ENTITY Ctr_e_pocket		"Pocket">
@@ -370,8 +370,8 @@
 
 <!ENTITY Ctr_pw_settings	"Indstillinger">
 <!ENTITY Ctr_pw_set_reset	"Gendan standard">
-<!ENTITY Ctr_pw_set_predef	"Klassisk opsætning">
-<!ENTITY Ctr_pw_set_preaus	"&brandShortName; opsætning">
+<!ENTITY Ctr_pw_set_predef	"Klassisk-opsætning">
+<!ENTITY Ctr_pw_set_preaus	"&brandShortName;-opsætning">
 <!ENTITY Ctr_pw_set_export	"Eksportér indstillinger">
 <!ENTITY Ctr_pw_set_import	"Importér indstillinger">
 <!ENTITY Ctr_pw_set_syncon	"Føj til Sync">
@@ -386,12 +386,12 @@
 <!ENTITY Ctr_addon-bar.accesskey		"A">
 <!ENTITY appMenuGettingStarted.label	"Kom i gang">
 <!ENTITY goCmd.label					"Gå">
-<!ENTITY Ctr_menu_restart.label			"Restart">
-<!ENTITY Ctr_restartapp					"'Restart' in &brandShortName;-menu and file menu">
+<!ENTITY Ctr_menu_restart.label			"Genstart">
+<!ENTITY Ctr_restartapp					"Vis 'Genstart' i &brandShortName;-menu og Filer-menu">
 
-<!ENTITY Ctr_openInCurrentTab			"Open inputs in current tab">
-<!ENTITY Ctr_openInNewTab				"Open inputs in a new tab">
-<!ENTITY Ctr_openInNewWindow			"Open inputs in a new window">
+<!ENTITY Ctr_openInCurrentTab			"Åbn inputs i nuværende faneblad">
+<!ENTITY Ctr_openInNewTab				"Åbn inputs i et nyt faneblad">
+<!ENTITY Ctr_openInNewWindow			"Åbn inputs i et nyt vindue">
 
 <!-- For page context entries. Have to be adjusted for every locale! -->
 <!ENTITY backCmd.accesskey				"T">
