--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -132,7 +132,7 @@
 <!ENTITY Ctr_puibut_l_sep	"Trennlinie links">
 <!ENTITY Ctr_puibut_r_sep	"Trennlinie rechts">
 <!ENTITY Ctr_html5warning	"HTML5 Vollbildwarnung">
-<!ENTITY Ctr_oldtoplevimg	"Bilder oberster Ebene (Top-Level-Domain): klassische Darstellung">
+<!ENTITY Ctr_oldtoplevimg	"Klassische 'Bilddarstellung' auf weißem Hintergrund">
 <!ENTITY Ctr_altalertbox	"'Benachrichtigungs-Box': alternative Darstellung">
 <!ENTITY Ctr_emptygfavico	"Allgemeines Lesezeichensymbol ersetzen">
 <!ENTITY Ctr_mstatusbar		"Statusbereich: sichtbar und verschiebbar">
