--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -109,7 +109,7 @@
 <!ENTITY Ctr_appbutonclab	"Naziv">
 <!ENTITY Ctr_appbutonclab2	"Dodajte naziv ali pustite prazno">
 
-<!ENTITY Ctr_ui				"Splošen up.vmesnik">
+<!ENTITY Ctr_ui				"Splošen up. vmesnik">
 <!ENTITY Ctr_nbiconsize0	"Atribut orodne vrstice za krmarjenje 'iconsize'">
 <!ENTITY Ctr_smallnavbut	"Majhni gumbi na orodni vrstici za krmarjenje">
 <!ENTITY Ctr_backforward	"Premakljiva gumba Nazaj/Naprej">
@@ -191,7 +191,7 @@
 <!ENTITY Ctr_bmbunsortbm2	"Meni nad zaznamki">
 <!ENTITY Ctr_bmbviewbmsb	"Pojavna okna: prikaži 'Pokaži stransko vrstico'">
 <!ENTITY Ctr_bmbviewbmtb	"Pojavna okna: prikaži 'Orodno vrstico pogledov'">
-<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'Nerazvrščeni zaznamki'">
+<!ENTITY Ctr_bmbnounsort	"Pojavna okna: skrij 'Nerazvrščene zaznamke'">
 <!ENTITY Ctr_bmbutnotext	"Skrij oznako na vrstici zaznamkov">
 <!ENTITY Ctr_skipprintpr	"Gumb Natisni: preskoči predogled tiskanja">
 <!ENTITY Ctr_tbconmenu		"Vsebinski meni orodne vrstice: skrij 'Premakni v meni', 'Odstrani iz orodne vrstice', 'Ponovno naloži vse zavihke', 'Dodaj vse zavihke med zaznamke' in 'Ponovno odpri zavihek'">
@@ -252,7 +252,7 @@
 <!ENTITY Ctr_ib_nohovcolor	"Ob prehodu ne prikaži sive barve">
 <!ENTITY Ctr_ib_graycolor	"Siva barva za neznano identiteto in strani chrome">
 <!ENTITY Ctr_verifiedcolors	"Barve gumbov za preverjene strani, varne in nezanesljive povezave">
-<!ENTITY Ctr_ibinfoico		"Nadomesti ikono 'i'z ikono sveta">
+<!ENTITY Ctr_ibinfoico		"Nadomesti ikono 'i' z ikono sveta">
 <!ENTITY Ctr_ibinfoico2		"Skrij ikono 'i' (če je možno)">
 <!ENTITY Ctr_iblabels		"Skrij oznake">
 <!ENTITY Ctr_faviconurl		"Zaznamka: ikona trenutne spletne strani">
@@ -283,7 +283,7 @@
 <!ENTITY Ctr_tabstoolbar	"Orodna vrstica zavihkov">
 <!ENTITY Ctr_navbar			"Orodna vrstica za krmarjenje">
 <!ENTITY Ctr_bookbar		"Orodna vrstica zaznamkov">
-<!ENTITY Ctr_notoolbar		"Skrita (ne prikaži predmete menija)">
+<!ENTITY Ctr_notoolbar		"Skrita (ne prikaži predmetov menija)">
 
 <!ENTITY Ctr_mbarforceleft	"Prvi element">
 <!ENTITY Ctr_mbarforceright	"Drugi element">
@@ -357,7 +357,7 @@
 <!ENTITY Ctr_fx36prefs2		"Opomba: staro okno nastavitev ne vsebuje vseh nedavno dodanih nastavitev brskalnika!">
 <!ENTITY Ctr_fx38reader		"&brandShortName; 38+ je vpeljal nov 'način za branje'. Odznačitev teh nastavitev ga onemogoči in odstrani njegovo ikono iz naslovne vrstice.">
 <!ENTITY Ctr_fx38pocket		"&brandShortName; 38.0.5+ je vpeljal storitev 'Pocket'. Odznačitev te nastavitve jo onemogoči in iz orodnih vrstic odstrani njen gumb.">
-<!ENTITY Ctr_fx38pocket2	"Opomba: premikanje gumba 'Pocket' v 'paleto za prilagoditev' pred onemogočanjem te nastavitve odstani tudi vnose 'Pocket' v menijih zaznamkov in bralnika.">
+<!ENTITY Ctr_fx38pocket2	"Opomba: premikanje gumba 'Pocket' v 'paleto za prilagoditev' pred onemogočanjem te nastavitve odstani tudi vnose 'Pocket' iz menijev zaznamkov in bralnika.">
 <!ENTITY Ctr_e_searchui		"Videz iskanja">
 <!ENTITY Ctr_e_loop			"Klicanje in pogovori">
 <!ENTITY Ctr_e_deved		"Tema Developer Edition">
