--- a/xpi/locale/hsb/options.dtd
+++ b/xpi/locale/hsb/options.dtd
@@ -138,7 +138,7 @@
 <!ENTITY Ctr_mstatusbar		"Přesuwajomny wobłuk statusoweje lajsty">
 <!ENTITY Ctr_mstatusbars4e	"Statusowy wobłuk so přez 'Status-4-Evar' kontroluje">
 <!ENTITY Ctr_mstatusbartpp	"Statusowy wobłuk so přez 'ThePuzzlePiece' kontroluje">
-<!ENTITY Ctr_mstatusbarpzt	"Statusowy wobłuk so přez 'Puzzle Toolbars' kontroluje">
+<!ENTITY Ctr_mstatusbarpzt	"Statusowy wobłuk so přez 'Puzzle Bars' kontroluje">
 <!ENTITY Ctr_mstatusbarabr	"Statusowy wobłuk so přez 'The Addon Bar (Restored)' komtroluje">
 <!ENTITY Ctr_combrelstop	"Tłóčatce Stój a Znowa kombinować">
 <!ENTITY Ctr_stoprel1		"Wažny: Tłóčatko Znowa za tłóčatkom Stój zaměstnić!">
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Pytanske polo">
 <!ENTITY Ctr_autocomplete	"Wuskakowace wokno awtowudospołnjenja">
 <!ENTITY Ctr_altautocompl	"Alternatiwny napohlad">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Funkciju 'Zjednoćene awtowudospołnjenje' znjemóžnić">
 <!ENTITY Ctr_lbsugresi		"Limit wysokosće znjemóžnić">
 <!ENTITY Ctr_lbsugres		"Ličba wuslědkow">
