--- a/xpi/locale/cs/options.dtd
+++ b/xpi/locale/cs/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Vyhledávač">
 <!ENTITY Ctr_autocomplete	"Autocomplete popup">
 <!ENTITY Ctr_altautocompl	"Alternative appearance">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Zakázat automatické doplňování">
 <!ENTITY Ctr_lbsugresi		"Disable height limit">
 <!ENTITY Ctr_lbsugres		"Number of results">
