--- a/xpi/locale/el/options.dtd
+++ b/xpi/locale/el/options.dtd
@@ -266,7 +266,8 @@
 <!ENTITY Ctr_lbsbsize		"Προσαρμοσμένο εύρος γραμμών διευθύνσεων και αναζήτησης">
 <!ENTITY Ctr_searchbar		"Γραμμή αναζήτησης">
 <!ENTITY Ctr_autocomplete	"Αναδυόμενο αυτόματης συμπλήρωσης">
-<!ENTITY Ctr_altautocompl	"Εναλλακτική εμφάνιση (πειραματικό)">
+<!ENTITY Ctr_altautocompl	"Εναλλακτική εμφάνιση">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Απενεργοποίηση χαρακτηριστικού ενιαίας αυτόματης συμπλήρωσης">
 <!ENTITY Ctr_lbsugresi		"Απενεργοποίηση ορίου ύψους">
 <!ENTITY Ctr_lbsugres		"Αριθμός αποτελεσμάτων">
