--- a/xpi/locale/es/options.dtd
+++ b/xpi/locale/es/options.dtd
@@ -268,6 +268,7 @@
 <!ENTITY Ctr_autocomplete	"Ménu emergente de autocompletado">
 <!ENTITY Ctr_urlbar_uc		"Deshabilitar 'Autocompletado unificado'">
 <!ENTITY Ctr_altautocompl	"Apariencia alternativa">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_lbsugresi		"Deshabilitar límite de altura">
 <!ENTITY Ctr_lbsugres		"Número de resultados">
 <!ENTITY Ctr_lbsbradius		"Borde de radio personalizado para barra de direcciones y barra de búsqueda">
