--- a/xpi/locale/it/options.dtd
+++ b/xpi/locale/it/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Barra di ricerca">
 <!ENTITY Ctr_autocomplete	"Completamento automatico">
 <!ENTITY Ctr_altautocompl	"Aspetto alternativo">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Disattiva il completamento automatico">
 <!ENTITY Ctr_lbsugresi		"Disattiva il limite di altezza">
 <!ENTITY Ctr_lbsugres		"Numero di risultati">
