--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"検索バー">
 <!ENTITY Ctr_autocomplete	"自動補完候補のポップアップリスト">
 <!ENTITY Ctr_altautocompl	"替わりの自動補完候補で置き換える">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"自動補完機能を無効にする">
 <!ENTITY Ctr_lbsugresi		"候補数を制限しない">
 <!ENTITY Ctr_lbsugres		"候補の表示数">
