--- a/xpi/locale/pl/options.dtd
+++ b/xpi/locale/pl/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Pasek wyszukiwania">
 <!ENTITY Ctr_autocomplete	"Menu podręczne autouzupełniania">
 <!ENTITY Ctr_altautocompl	"Alternatywny wygląd">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Wyłącz funkcję 'ujednolicone autouzupełnianie'">
 <!ENTITY Ctr_lbsugresi		"Wyłącz ograniczenie wysokości">
 <!ENTITY Ctr_lbsugres		"Liczba wyników">
