--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Панель поиска">
 <!ENTITY Ctr_autocomplete	"Автозаполнение">
 <!ENTITY Ctr_altautocompl	"Альтернативный внешний вид">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение»">
 <!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
 <!ENTITY Ctr_lbsugres		"Количество результатов">
