--- a/xpi/locale/sl/options.dtd
+++ b/xpi/locale/sl/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Iskalna vrstica">
 <!ENTITY Ctr_autocomplete	"Pojavno okno samodokončevanja">
 <!ENTITY Ctr_altautocompl	"Nadomestni videz">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Onemogoči značilnost 'poenotenega samodokončevanja'">
 <!ENTITY Ctr_lbsugresi		"Onemogoči omejitev višine">
 <!ENTITY Ctr_lbsugres		"Število rezultatov">
