--- a/xpi/locale/uk/options.dtd
+++ b/xpi/locale/uk/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"Панель пошуку">
 <!ENTITY Ctr_autocomplete	"Спливаюче вікно автозаповнення">
 <!ENTITY Ctr_altautocompl	"Альтернативний вигляд">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"Вимкнути функцію «автозаповнення»">
 <!ENTITY Ctr_lbsugresi		"Вимкнути обмеження висоти">
 <!ENTITY Ctr_lbsugres		"Кількість результатів">
