--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -267,6 +267,7 @@
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
+<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_lbsugres		"结果数量">
