--- a/xpi/locale/et/options.dtd
+++ b/xpi/locale/et/options.dtd
@@ -132,7 +132,7 @@
 <!ENTITY Ctr_puibut_l_sep	"Vasakul">
 <!ENTITY Ctr_puibut_r_sep	"Paremal">
 <!ENTITY Ctr_html5warning	"HTML5 täisekraani hoiatus">
-<!ENTITY Ctr_oldtoplevimg	"'Tippdomeeni' pildid: klassikaline välimus">
+<!ENTITY Ctr_oldtoplevimg	"Klassikaline pildi välimus valgel taustal">
 <!ENTITY Ctr_altalertbox	"'Teavituskast': alternatiivne välimus">
 <!ENTITY Ctr_emptygfavico	"Asenda üldine lehe ikoon">
 <!ENTITY Ctr_mstatusbar		"Liigutatav olekupaneel">
@@ -267,7 +267,7 @@
 <!ENTITY Ctr_searchbar		"Otsinguriba">
 <!ENTITY Ctr_autocomplete	"Automaatlõpetamise hüpik">
 <!ENTITY Ctr_altautocompl	"Alternatiivne välimus">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_it	"Eemalda kirjed 'Otsi otsingumootoriga...' ja 'Külasta' (kui on)">
 <!ENTITY Ctr_urlbar_uc		"Keela ühtse automaatlõpetamise funktsioon 'unified autocomplete'">
 <!ENTITY Ctr_lbsugresi		"Keela kõrguse piirang">
 <!ENTITY Ctr_lbsugres		"Tulemuste arv">
@@ -322,7 +322,7 @@
 <!ENTITY Ctr_nonavbarbg2	"Mõjutab kõiki laienduse 'Beyond Australis' Slim Chrome'i tööriistaribasid.">
 <!ENTITY Ctr_nonavborder	"Lisa ribale ülemine piirjoon">
 <!ENTITY Ctr_nonavtbborder	"Ülemised tööriistaribad: eemalda tööriistariba piirjooned">
-<!ENTITY Ctr_hidesbclose	"Külgribad: peida külgriba sulgemise nupp">
+<!ENTITY Ctr_hidesbclose	"Külgribad: peida sulgemise nupp">
 <!ENTITY Ctr_notextshadow	"Tööriistaribad: peida tööriistariba teksti ja kaardi teksti vari">
 <!ENTITY Ctr_chevronfix		"Aadressiriba: peida topeltnool ('Rohkem tööriistu') tööriistariba lõpus">
 <!ENTITY Ctr_tbsep_winc		"Ülemised tööriistaribad: lisa-tööriistariba eraldajad">
@@ -360,7 +360,7 @@
 <!ENTITY Ctr_fx38pocket		"Sellelt eelistuselt märke eemaldamine keelab 'Pocket' funktsiooni ja eemaldab selle nupu tööriistaribadelt.">
 <!ENTITY Ctr_fx38pocket2	"Märkus: Enne selle eelistuse keelamist 'Pocket'-nupu 'kohandamise aknasse' liigutamine eemaldab järjehoidjate ja lugemisnimekirja menüüdest ka kõik funktsiooniga 'Pocket' seotud kirjed.">
 <!ENTITY Ctr_e_searchui		"Otsingu välimus">
-<!ENTITY Ctr_e_loop			"Helistamine ja vestlus / Loop">
+<!ENTITY Ctr_e_loop			"Hello / Helistamine ja vestlus / Loop">
 <!ENTITY Ctr_e_deved		"Arendaja väljalaske välimus">
 <!ENTITY Ctr_e_prefsui		"Eelistused kaardil">
 <!ENTITY Ctr_e_readermode	"Lugemisvaade">
@@ -388,7 +388,7 @@
 <!ENTITY appMenuGettingStarted.label	"Alustamine">
 <!ENTITY goCmd.label					"Mine">
 <!ENTITY Ctr_menu_restart.label			"Taaskäivita">
-<!ENTITY Ctr_restartapp					"'Taaskäivita' &brandShortName;i nupu menüüs ja menüüs Fail">
+<!ENTITY Ctr_restartapp					"Näita &brandShortName;i nupu menüüs ja menüüs Fail kirjet 'Taaskäivita'">
 
 <!ENTITY Ctr_openInCurrentTab			"Ava sisestused praegusel kaardil">
 <!ENTITY Ctr_openInNewTab				"Ava sisestused uuel kaardil">
