--- a/xpi/locale/en-US/options.dtd
+++ b/xpi/locale/en-US/options.dtd
@@ -290,7 +290,7 @@
 <!ENTITY Ctr_mbarforceright	"Last element">
 
 <!ENTITY Ctr_toolbars		"Toolbars">
-<!ENTITY Ctr_dblclnewtab	"Double click opens a 'new' tab">
+<!ENTITY Ctr_dblclnewtab	"Double click on toolbar opens a new tab">
 <!ENTITY Ctr_hidetbwot		"Hide tabs toolbar with only one visible tab">
 <!ENTITY Ctr_hidetbwote		"Reduce hiding delay on startup">
 <!ENTITY Ctr_hidetbwote_i	"Could cause glitches on tabs toolbar">
