--- a/xpi/locale/ru/options.dtd
+++ b/xpi/locale/ru/options.dtd
@@ -74,7 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"Некоторые разновидности вкладок несовместимы с расширением 'Hide Caption Titlebar Plus'.">
 <!ENTITY Ctr_hctpinfoab		"Кнопка в заголовке несовместима с расширением 'Hide Caption Titlebar Plus'.">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"Расширение 'Tabs on Bottom' не совместимо с '&Ctr_title;' и должно быть отключено. Используйте настройки '&Ctr_cuitabsnontop;'!">
 
 <!ENTITY Ctr_appbutton		"Кнопка &brandShortName;">
 <!ENTITY Ctr_appbutton0		"отключена">
@@ -166,7 +166,7 @@
 <!ENTITY Ctr_search_ui		"Поиск">
 <!ENTITY Ctr_ctroldsearch	"Старый поиск">
 <!ENTITY Ctr_ctroldsearchc	"Очистить форму после поиска">
-<!ENTITY Ctr_ctroldsearchr	"Revert to first search engine in list after search">
+<!ENTITY Ctr_ctroldsearchr	"После поиска переключаться на первую в списке поисковую систему">
 <!ENTITY Ctr_search_oit		"Открывать поиск в новой вкладке">
 <!ENTITY Ctr_osearch_meoit	"Средний-клик: поиск в новой активной вкладке">
 <!ENTITY Ctr_osearch_iwidth	"Автонастройка ширины всплывающего меню">
@@ -267,7 +267,7 @@
 <!ENTITY Ctr_searchbar		"Панель поиска">
 <!ENTITY Ctr_autocomplete	"Автозаполнение">
 <!ENTITY Ctr_altautocompl	"Альтернативный внешний вид">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_it	"Удалить пункты «Искать в...» и «Посетить» (при наличии)">
 <!ENTITY Ctr_urlbar_uc		"Отключить функцию «автозаполнение»">
 <!ENTITY Ctr_lbsugresi		"Отключить ограничение по высоте">
 <!ENTITY Ctr_lbsugres		"Количество результатов">
@@ -307,7 +307,7 @@
 <!ENTITY Ctr_menubarnofog	"Убрать затуманивание/цвет фона (Windows AeroGlass/8)">
 
 <!ENTITY Ctr_aerocolors		"Цвета Blue Aero для основных панелей и вкладок">
-<!ENTITY Ctr_aerocolorsg	"Grey-blue Aero colors">
+<!ENTITY Ctr_aerocolorsg	"Серо-голубые цвета Aero">
 <!ENTITY Ctr_transpttbw10	"Панель заголовка/меню/вкладок: убрать цвет фона">
 <!ENTITY Ctr_transpttbew10	"Дополнительные твики для некоторых тем ОС">
 <!ENTITY Ctr_transptcw10	"Скрыть стандартные кнопки ОС мин/макс/закрыть">
