--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -290,8 +290,8 @@
 <!ENTITY Ctr_mbarforceright	"Letztes Element">
 
 <!ENTITY Ctr_toolbars		"Leisten">
-<!ENTITY Ctr_dblclnewtab	"Doppelklick öffnet einen neuen Tab">
-<!ENTITY Ctr_hidetbwot		"Tableiste mit nur einem sichtbaren Tab verstecken">
+<!ENTITY Ctr_dblclnewtab	"Doppelklick auf Leiste öffnet einen neuen Tab">
+<!ENTITY Ctr_hidetbwot		"Leiste mit nur einem sichtbaren Tab verstecken">
 <!ENTITY Ctr_hidetbwote		"Verzögerung beim Start reduzieren">
 <!ENTITY Ctr_hidetbwote_i	"Hintergrundfarbe der Tableiste könnte fehlerhaft sein">
 <!ENTITY Ctr_hidetbwote2	"Titelleiste beibehalten (Tabs oben)">
