--- a/xpi/locale/zh-CN/options.dtd
+++ b/xpi/locale/zh-CN/options.dtd
@@ -74,7 +74,7 @@
 
 <!ENTITY Ctr_hctpinfotab	"部分标签页变化与 “Hide Caption Titlebar Plus” 扩展不兼容。">
 <!ENTITY Ctr_hctpinfoab		"标题栏上的按钮与 “Hide Caption Titlebar Plus” 扩展不兼容。">
-<!ENTITY Ctr_tobainfotab	"The add-on 'Tabs on Bottom' is not compatible with '&Ctr_title;' and should be disabled. Use available '&Ctr_cuitabsnontop;' settings instead!">
+<!ENTITY Ctr_tobainfotab	"扩展 “Tabs on Bottom” 与 “&Ctr_title;” 不兼容，并且应该被禁用。使用 “&Ctr_cuitabsnontop;” 来替代。">
 
 <!ENTITY Ctr_appbutton		"应用程序按钮">
 <!ENTITY Ctr_appbutton0		"按钮已禁用">
@@ -267,7 +267,7 @@
 <!ENTITY Ctr_searchbar		"搜索栏">
 <!ENTITY Ctr_autocomplete	"自动完成弹出框">
 <!ENTITY Ctr_altautocompl	"备选的外观">
-<!ENTITY Ctr_autocompl_it	"Remove 'Search with...' and 'Visit' items (if present)">
+<!ENTITY Ctr_autocompl_it	"移除 “使用...搜索” 和 “访问” 项目 (如果存在的话)">
 <!ENTITY Ctr_urlbar_uc		"禁用 “统一自动完成” 功能">
 <!ENTITY Ctr_lbsugresi		"禁用高度限制">
 <!ENTITY Ctr_lbsugres		"结果数量">
